UtahLiveDataTest/src/objects/Announcement__c.object
<CustomObject>
    <fields>
        <fullName>EligibilityDescription__c</fullName>
        <description>Details about eligibility</description>
        <label>Eligibility Description</label>
        <length>25000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>EligibleApplicantTypes__c</fullName>
        <label>Eligible Applicant Types</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Charter Schools</fullName>
                </value>
                <value>
                    <fullName>City or township governments</fullName>
                </value>
                <value>
                    <fullName>County governments</fullName>
                </value>
                <value>
                    <fullName>Independent school districts</fullName>
                </value>
                <value>
                    <fullName>Individuals</fullName>
                </value>
                <value>
                    <fullName>Non Profit</fullName>
                </value>
                <value>
                    <fullName>Nonprofits having a 501 (C)(3)</fullName>
                </value>
                <value>
                    <fullName>Private institutions of higher education</fullName>
                </value>
                <value>
                    <fullName>Private School</fullName>
                </value>
                <value>
                    <fullName>Public housing authorities</fullName>
                </value>
                <value>
                    <fullName>Special district governments</fullName>
                </value>
                <value>
                    <fullName>State governments</fullName>
                </value>
                <value>
                    <fullName>State institutions for higher education</fullName>
                </value>
                <value>
                    <fullName>School Districts</fullName>
                </value>
                <value>
                    <fullName>Tribal Entity</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EmailPOC__c</fullName>
        <formula>PointofContact__r.Email</formula>
        <label>POC Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <description>Point of Contact Email</description>
        <formula>Contact__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Point of Contact Email</inlineHelpText>
        <label>Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EnableApplicationSubmissionEmail__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field if checked will send an automated email to the applicant that application is submitted for internal review</description>
        <inlineHelpText>This field if checked will send an automated email to the applicant that application is submitted for internal review</inlineHelpText>
        <label>Enable Application Submission Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EnablePreApplicationSubmissionEmail__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field will decide whether an email  will be sent to that applicant confirming that the data has been sent to Internal for review</description>
        <inlineHelpText>This field will decide whether an email  will be sent to that applicant confirming that the data has been sent to Internal for review</inlineHelpText>
        <label>Enable Pre-Application Submission Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EstimatedAmount__c</fullName>
        <formula>EstimatedAverageSizeOfAward__c*EstimatedNumberOfAwards__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Estimated Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EstimatedAverageSizeOfAward__c</fullName>
        <description>Estimated average size of the award.</description>
        <label>Estimated Average Size of Award</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EstimatedBudgetPeriodEndDate__c</fullName>
        <description>Proposed Budget Period End Date</description>
        <label>Estimated Budget Period End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EstimatedBudgetPeriodStartDate__c</fullName>
        <description>Proposed Budget Period Start Date</description>
        <label>Estimated Budget Period Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EstimatedFundedAmount__c</fullName>
        <label>Estimated Request Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EstimatedFundingAmountJustification__c</fullName>
        <label>Estimated Funding Amount Justification</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>EstimatedFundingAmount__c</fullName>
        <label>Estimated Funding Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EstimatedNumberApplications__c</fullName>
        <label>Estimated Number Of Applications</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EstimatedNumberOfAwards__c</fullName>
        <description>Estimated number of awards that will  be created for the announcement.</description>
        <label>Estimated Number Of Awards</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EstimatedProjectPeriodEndDateTime__c</fullName>
        <description>Estimated project period end date and time for the prospective awards.</description>
        <label>Estimated Project Period End DateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>EstimatedProjectPeriodEndDate__c</fullName>
        <description>Estimated project period end date for the prospective awards.</description>
        <label>Estimated Project Period End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EstimatedProjectPeriodStartDateTime__c</fullName>
        <description>Estimated project period start date for the prospective awards.</description>
        <label>Estimated Project Period Start DateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>EstimatedProjectPeriodStartDate__c</fullName>
        <description>Estimated project period start date for the prospective awards.</description>
        <label>Estimated Project Period Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ExecutiveName__c</fullName>
        <formula>Executive__r.Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Executive Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Executive__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Fiscal Executive User for approving FDM</description>
        <inlineHelpText>Fiscal Executive User for approving FDM</inlineHelpText>
        <label>Executive</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Funding_Opportunities4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ExpectedNumberofAwards__c</fullName>
        <label>Expected Number of Awards</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ExpectedTotalAwardAmount__c</fullName>
        <label>Expected Total Award Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ExtensionDays__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Defines extension days for application deadline</description>
        <inlineHelpText>Defines extension days for application deadline</inlineHelpText>
        <label>ExtensionDays</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FOALead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>FOA Lead</label>
        <referenceTo>FOALead__c</referenceTo>
        <relationshipLabel>Funding Opportunities</relationshipLabel>
        <relationshipName>Funding_Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FOAPublicationDate__c</fullName>
        <label>FOA Publication Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FOAReviews__c</fullName>
        <defaultValue>0</defaultValue>
        <label>FOA Reviews</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FOAStatus__c</fullName>
        <label>FOA Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Published</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Created</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Submitted for Approval</fullName>
                </value>
                <value>
                    <fullName>Reviewed</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
                <value>
                    <fullName>Disapproved</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FederalProgram__c</fullName>
        <formula>IF( ISBLANK(Program__c), &apos;&apos;, HYPERLINK((&apos;/&apos; + Program__c), Program__r.FederalProgramTitle__c ,&apos;_self&apos;) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Federal Program</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieldHistoryEntityName__c</fullName>
        <formula>&apos;Announcement&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Field History Entity Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FinancialApprover__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Financial Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Funding_Opportunities1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FiscalYearLookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Fiscal Year</label>
        <referenceTo>FiscalYear__c</referenceTo>
        <relationshipName>Announcements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FiscalYearNumber__c</fullName>
        <formula>FiscalYearLookup__r.FiscalYearNumber__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Fiscal Year</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FiscalYearText__c</fullName>
        <label>Fiscal Year</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FiscalYear__c</fullName>
        <label>Fiscal Year</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>2000</fullName>
                </value>
                <value>
                    <fullName>2001</fullName>
                </value>
                <value>
                    <fullName>2002</fullName>
                </value>
                <value>
                    <fullName>2003</fullName>
                </value>
                <value>
                    <fullName>2004</fullName>
                </value>
                <value>
                    <fullName>2005</fullName>
                </value>
                <value>
                    <fullName>2006</fullName>
                </value>
                <value>
                    <fullName>2007</fullName>
                </value>
                <value>
                    <fullName>2008</fullName>
                </value>
                <value>
                    <fullName>2009</fullName>
                </value>
                <value>
                    <fullName>2010</fullName>
                </value>
                <value>
                    <fullName>2011</fullName>
                </value>
                <value>
                    <fullName>2012</fullName>
                </value>
                <value>
                    <fullName>2013</fullName>
                </value>
                <value>
                    <fullName>2014</fullName>
                </value>
                <value>
                    <fullName>2015</fullName>
                </value>
                <value>
                    <fullName>2016</fullName>
                </value>
                <value>
                    <fullName>2017</fullName>
                </value>
                <value>
                    <fullName>2018</fullName>
                </value>
                <value>
                    <fullName>2019</fullName>
                </value>
                <value>
                    <fullName>2020</fullName>
                </value>
                <value>
                    <fullName>2021</fullName>
                </value>
                <value>
                    <fullName>2022</fullName>
                </value>
                <value>
                    <fullName>2023</fullName>
                </value>
                <value>
                    <fullName>2024</fullName>
                </value>
                <value>
                    <fullName>2025</fullName>
                </value>
                <value>
                    <fullName>2026</fullName>
                </value>
                <value>
                    <fullName>2027</fullName>
                </value>
                <value>
                    <fullName>2028</fullName>
                </value>
                <value>
                    <fullName>2029</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FormulaVariable1__c</fullName>
        <description>Simple Weight for Variable1 for Formula Grants Announcements</description>
        <inlineHelpText>Simple Weight for Variable1 for Formula Grants Announcements</inlineHelpText>
        <label>Simple Weight for Variable1</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FormulaVariable2__c</fullName>
        <description>Simple Weight for Variable2 for Formula Grants Announcements</description>
        <inlineHelpText>Simple Weight for Variable2 for Formula Grants Announcements</inlineHelpText>
        <label>Simple Weight for Variable2</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FormulaVariable3__c</fullName>
        <description>Simple Weight for Variable3 for Formula Grants Announcements</description>
        <inlineHelpText>Simple Weight for Variable3 for Formula Grants Announcements</inlineHelpText>
        <label>Simple Weight for Variable3</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FunderType__c</fullName>
        <label>Funder Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Federal</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>State</fullName>
                </value>
                <value>
                    <fullName>NGO</fullName>
                </value>
                <value>
                    <fullName>Internal</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FundingAllocationStatus__c</fullName>
        <description>Status of Funding Allocation Plans for an announcement</description>
        <inlineHelpText>Status of Funding Allocation Plans for an announcement</inlineHelpText>
        <label>Funding Allocation Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Created</fullName>
                </value>
                <value>
                    <fullName>Submitted for Approval</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Notified</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FundingInstrumentType__c</fullName>
        <label>Funding Instrument Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>G: Grant</fullName>
                </value>
                <value>
                    <fullName>CA: Cooperative Agreement</fullName>
                </value>
                <value>
                    <fullName>O: Other</fullName>
                </value>
                <value>
                    <fullName>PC: Procurement Contract</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FundingOppURL__c</fullName>
        <label>External Announcement URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>FundingOpportunityNameTemplate__c</fullName>
        <formula>IF( $Setup.GNT__UserPreferences__c.GNT__ActiveAppName__c = &apos;StateasGrantor&apos;,&apos;AN-&apos;+ Program__r.Account__r.Code__c +&apos;-&apos;,&apos;FOA-&apos;+ AwardingFedAgency__r.Code__c +&apos;-&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FundingOpportunityNameTemplate</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FundingOpportunityURL__c</fullName>
        <label>Funding Opportunity Web Address</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>FundingPlanCreated__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Funding Allocation Plan created for Formula Grants?</description>
        <inlineHelpText>Funding Allocation Plan created for Formula Grants?</inlineHelpText>
        <label>Funding Plan Created</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GrantCode__c</fullName>
        <description>Grant Abbreviation Code</description>
        <label>Grant Code</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GranteeMatch__c</fullName>
        <description>Percentage of Sub Recipient  Match Required</description>
        <inlineHelpText>Percentage of Sub Recipient  Match Required</inlineHelpText>
        <label>Sub Recipient Match %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>GrantorSubmitforApproval__c</fullName>
        <formula>OR(  (ISPICKVAL(Status__c , &apos;Approved&apos;)),
ISPICKVAL( Status__c , &apos;Converted to Application&apos;),
ISPICKVAL( Status__c , &apos;Submitted for Approval&apos;),
 ISPICKVAL( Status__c , &apos;Published&apos;),
 ISPICKVAL( Status__c , &apos;RFA Published&apos;), 
ISPICKVAL( Status__c , &apos;RFA Approved&apos;), 
ISPICKVAL( Status__c , &apos;RFA Submitted for Approval&apos;),
ISPICKVAL( Status__c , &apos;Closed&apos;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Submit for Approval(FOA)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GrantsManager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>GrantsManager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Funding_Opportunities9</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HaveWeReceivedAwardFromProgram__c</fullName>
        <label>HaveWeReceivedAwardFromProgram</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HideAssignTab__c</fullName>
        <formula>If($User.IsApplicant__c, true, IF(TEXT( Status__c )=&apos;Closed&apos; || TEXT( Status__c )=&apos;Archived&apos;,false,true))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HideAssignTab</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HideDeleteBtn__c</fullName>
        <formula>NOT(OR(ISPICKVAL(Status__c,&apos;Created&apos;),ISPICKVAL(Status__c,&apos;Reviewed&apos;)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hide Delete Button</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HideEditBtnForOrg__c</fullName>
        <description>Combines the existing HideEditBtn__c field with Agency wide hide logic</description>
        <formula>IF(OR(HideEditBtn__c, HideUSBEFields__c), TRUE, FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HideEditBtnForOrg</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HideEditBtn__c</fullName>
        <formula>OR(ISPICKVAL(Status__c , &apos;RFA Published&apos;), 
AND(RFARequired__c==false ,ISPICKVAL(Status__c , &apos;Published&apos;)), 
ISPICKVAL(Status__c , &apos;Approved&apos;), 
ISPICKVAL(Status__c , &apos;Rejected&apos;), 
ISPICKVAL(Status__c , &apos;RFA Approved&apos;), 
ISPICKVAL(Status__c , &apos;RFA Rejected&apos;), 
ISPICKVAL(Status__c , &apos;Submitted for Approval&apos;), 
ISPICKVAL(Status__c , &apos;RFA Submitted for Approval&apos;), 
ISPICKVAL(Status__c , &apos;Closed&apos;), 
ISPICKVAL(Status__c , &apos;Archived&apos;), 
ISPICKVAL(Status__c , &apos;Converted to Application&apos;), 
ISPICKVAL(Status__c , &apos;Converted to Pre-Application&apos;), 
OwnerId!= $User.Id 
)</formula>
        <label>HideEditBtn</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HideFAPApprovalBtn__c</fullName>
        <description>Hide FAP Approval Btn</description>
        <formula>NOT(ISPICKVAL(FundingAllocationStatus__c,&apos;Created&apos;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Hide FAP Approval Btn</inlineHelpText>
        <label>Hide FAP Approval Btn</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HideFormsSection__c</fullName>
        <formula>Text(ApplicationCreatedOutside__c) ==&apos;Yes&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hide Forms Section</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HideMatchField1__c</fullName>
        <description>Prev Formula: OrganizationName__c = &apos;USBE&apos; &amp;&amp; ISPICKVAL(Program__r.ProgramPathway__c,&apos;Fed-Formula&apos;)</description>
        <formula>OrganizationName__c = &apos;USBE&apos; &amp;&amp; 
( 
OR ( 
ISPICKVAL(Program__r.ProgramPathway__c,&apos;Fed-Formula&apos;), 
ISPICKVAL(Program__r.ProgramPathway__c,&apos;Fed-Competitive&apos;) 
) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HideMatchField1</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HideMatchField__c</fullName>
        <description>Prev Formula: Administration__c &lt;&gt; &apos;UOVC&apos; &amp;&amp; ISPICKVAL(Program__r.ProgramPathway__c,&apos;Fed-Formula&apos;)</description>
        <formula>Administration__c &lt;&gt; &apos;UOVC&apos; &amp;&amp; 
( 
OR (
ISPICKVAL(Program__r.ProgramPathway__c,&apos;Fed-Formula&apos;),
ISPICKVAL(Program__r.ProgramPathway__c,&apos;Fed-Competitive&apos;)
)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HideMatchField</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HideNewGoalBtn__c</fullName>
        <formula>OR(ISPICKVAL(Status__c , &apos;RFA Published&apos;),
AND(RFARequired__c==false ,ISPICKVAL(Status__c , &apos;Published&apos;)),
ISPICKVAL(Status__c , &apos;Approved&apos;),
ISPICKVAL(Status__c , &apos;Rejected&apos;),
ISPICKVAL(Status__c , &apos;RFA Approved&apos;),
ISPICKVAL(Status__c , &apos;RFA Rejected&apos;),
ISPICKVAL(Status__c , &apos;Submitted for Approval&apos;),
ISPICKVAL(Status__c , &apos;RFA Submitted for Approval&apos;),
ISPICKVAL(Status__c , &apos;Closed&apos;),
ISPICKVAL(Status__c , &apos;Converted to Application&apos;)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hide New Goal Btn</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HideNewPackageBtn__c</fullName>
        <description>Logic for hiding new package</description>
        <formula>OR(ISPICKVAL(Status__c , &apos;RFA Published&apos;), 
AND(RFARequired__c==false ,ISPICKVAL(Status__c , &apos;Published&apos;)), 
ISPICKVAL(Status__c , &apos;Approved&apos;), 
ISPICKVAL(Status__c , &apos;Rejected&apos;), 
ISPICKVAL(Status__c , &apos;RFA Approved&apos;), 
ISPICKVAL(Status__c , &apos;RFA Rejected&apos;), 
ISPICKVAL(Status__c , &apos;Submitted for Approval&apos;), 
ISPICKVAL(Status__c , &apos;RFA Submitted for Approval&apos;), 
ISPICKVAL(Status__c , &apos;Closed&apos;), 
ISPICKVAL(Status__c , &apos;Archived&apos;), 
ISPICKVAL(Status__c , &apos;Converted to Application&apos;) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Logic for hiding new package</inlineHelpText>
        <label>Hide New Package Btn</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HideNewReviewBtn__c</fullName>
        <description>Logic for Hiding new Review Button</description>
        <formula>OR(ISPICKVAL(Status__c , &apos;RFA Published&apos;), 
AND(RFARequired__c==false ,ISPICKVAL(Status__c , &apos;Published&apos;)), 
ISPICKVAL(Status__c , &apos;Approved&apos;), 
ISPICKVAL(Status__c , &apos;Rejected&apos;), 
ISPICKVAL(Status__c , &apos;RFA Approved&apos;), 
ISPICKVAL(Status__c , &apos;RFA Rejected&apos;), 
ISPICKVAL(Status__c , &apos;Submitted for Approval&apos;), 
ISPICKVAL(Status__c , &apos;RFA Submitted for Approval&apos;), 
ISPICKVAL(Status__c , &apos;Closed&apos;), 
ISPICKVAL(Status__c , &apos;Converted to Application&apos;) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Logic for Hiding new Review Button</inlineHelpText>
        <label>Hide New Review Btn</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HideOwnerActions__c</fullName>
        <formula>IF( OwnerId == $User.Id , false, true )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hide Owner Actions</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HidePackageOption__c</fullName>
        <description>This field is used to make the Construction field read only</description>
        <formula>NOT(OR(ISPICKVAL(Status__c , &apos;Created&apos;), ISPICKVAL(Status__c, &apos;Reviewed&apos;)))</formula>
        <label>Hide Package Option</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HideReviewGroupBtn__c</fullName>
        <formula>NOT(ISPICKVAL(ApplicationsReviewStatus__c,&apos;Not Started&apos;) || ISPICKVAL(ApplicationsReviewStatus__c,&apos;Ready for Review&apos;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hide Review Group Btn</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HideReviewGroup__c</fullName>
        <formula>OR(ISPICKVAL(ApplicationsReviewStatus__c,&apos;Not Started&apos;) || ISPICKVAL(ApplicationsReviewStatus__c,&apos;Ready for Review&apos;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HideReviewGroup</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HideUSBEFields__c</fullName>
        <formula>IF(Program__r.Account__r.Name == &apos;USBE&apos;,True,False)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HideUSBEFields</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HideUnpublishFOA__c</fullName>
        <formula>NOT(AND( $User.Id = ScheduleManager__c ,TEXT(FOAStatus__c) = &apos;Published&apos;,Text(Status__c) != &apos;Review In Progress&apos;,text(Status__c) != &apos;Closed&apos;,
text(Status__c) != &apos;Expired&apos;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HideUnpublishFOA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HideUnpublishRFA__c</fullName>
        <formula>NOT(AND( $User.Id = ScheduleManager__c ,and(TEXT(Status__c) != &apos;Expired&apos;,TEXT(Status__c) != &apos;Closed&apos;,OR(TEXT(Status__c) = &apos;Active&apos;,TEXT(RFAStatus__c) = &apos;Published&apos;))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HideUnpublishRFA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IfOtherPleaseSpecify__c</fullName>
        <description>Grantor user can enter the agency which is not listed in the Awarding Agency pick list.</description>
        <label>If Other, Please Specify</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Impact__c</fullName>
        <inlineHelpText>1 - NA
2 - Low
3 - Medium
4 - High
5 - Very High</inlineHelpText>
        <label>Impact</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>InternalUniqueID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Uniquely identifies each record for data migration purpose only. It is auto populated by trigger in before insert context.</description>
        <externalId>true</externalId>
        <label>Internal Unique ID</label>
        <length>32</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>IsAnnouncementClosed__c</fullName>
        <formula>OR (TEXT( Status__c ) == &apos;Closed&apos;, TEXT( Status__c ) == &apos;Archived&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Announcement Closed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsAnnouncementSoleSource__c</fullName>
        <formula>NOT(ISPICKVAL(AnnouncementType__c,&apos;Sole Source/Directed&apos;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Announcement Sole Source</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsApplicationPackageincluded__c</fullName>
        <formula>true</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Application Package included ?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsFirstEdit__c</fullName>
        <formula>CreatedDate =  LastModifiedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IsFirstEdit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsFormulaGrant__c</fullName>
        <description>Is this Announcement related to a Formula Grants</description>
        <formula>NOT(ISPICKVAL(AnnouncementType__c,&apos;Formula Grants&apos;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Is this Announcement related to a Formula Grants</inlineHelpText>
        <label>Is Formula Grant</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsHistory__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is History</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsMultiProject__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Multi Project</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsNoReviewStepProgram__c</fullName>
        <formula>Program__r.IsNoReviewStepProgram__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IsNoReviewStepProgram</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>